--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "webpack-watch": "webpack -w",
     "express-server": "node ./server",
-    "dev": "concurrent --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-   },
+    "dev": "concurrently --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
+    "test": "mocha ./spec --compilers js:babel-core/register"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/benjicwood/Event-Genius.git"
@@ -28,8 +28,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "chai": "^3.5.0",
+    "enzyme": "^2.8.2",
     "express": "^4.15.2",
     "react": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
     "webpack": "^2.1.0-beta.22"
   },
