--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
+    "superagent": "^3.5.2",
     "webpack": "^2.1.0-beta.22"
   },
   "devDependencies": {
