--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
     "webpack": "^2.1.0-beta.22"
   },
